--- a/package.json
+++ b/package.json
@@ -1,37 +1,31 @@
 {
-    "name": "makeit-captcha",
-    "version": "2.0.7",
+    "name": "ys-captcha",
+    "version": "1.0.0",
     "author": {
-        "url": "https://www.makeit.vip",
-        "name": "lirongtong",
-        "email": "lirongtong@hotmail.com",
-        "github": "https://github.com/lirongtong"
+        "name": "zym",
+        "email": "786343536@qq.com",
+        "github": "https://github.com/zym163"
     },
     "keywords": [
         "vue",
         "vue3",
         "vite",
-        "makeit",
         "captcha",
-        "miitvip",
-        "makeit.vip",
         "admin-captcha",
         "component",
         "makeit-component",
-        "vue-component",
-        "麦可易特网"
+        "vue-component"
     ],
-    "description": "Makeit Captcha 滑块验证码组件，是基于 Vue3.x + Vite2.x + Canvas 开发，动态生成验证滑块，结合后端进行二次校验，能有效避免被恶意抓取后的模拟验证，进一步提升验证码的可靠性。",
+    "description": "YS Captcha 滑块验证码组件，是基于 Vue3.x + Vite2.x + Canvas 开发，动态生成验证滑块，结合后端进行二次校验，能有效避免被恶意抓取后的模拟验证，进一步提升验证码的可靠性。",
     "private": false,
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/lirongtong/miitvip-captcha.git"
+        "url": "git+https://github.com/zym163/YS-captcha.git"
     },
     "bugs": {
-        "url": "https://github.com/lirongtong/miitvip-captcha/issues"
+        "url": "https://github.com/zym163/YS-captcha/issues"
     },
-    "homepage": "https://admin.makeit.vip/components/captcha",
     "files": [
         "dist",
         "lib",
