--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
               with:
                   node-version: 16
             - run: npm install
-            - run: npm run build
+            - run: npm run build:example
 
     publish-npm:
         needs: build
